--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "chart.js": "3.6.0",
     "core-js": "3.6.5",
     "dropzone": "6.0.0-beta.1",
+    "leaflet": "^1.9.4",
     "quill": "1.3.6",
     "vue": "3.2.0",
     "vue-flatpickr-component": "9.0.5",
