--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
   },
   "dependencies": {
     "@popperjs/core": "2.10.2",
+    "axios": "^1.6.7",
     "bootstrap": "5.1.3",
     "chart.js": "3.6.0",
     "core-js": "3.6.5",
     "dropzone": "6.0.0-beta.1",
     "leaflet": "^1.9.4",
+    "leaflet-routing-machine": "^3.2.12",
+    "openrouteservice-js": "^0.3.2",
     "quill": "1.3.6",
     "vue": "3.2.0",
     "vue-flatpickr-component": "9.0.5",
