--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "vue": "3.2.0",
     "vue-flatpickr-component": "9.0.5",
     "vue-router": "4.0.14",
-    "vuex": "4.0.2"
+    "vuex": "4.0.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "4.5.0",
